Increasing test memory